# ProgramacionAFinal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Ticket_Cliente 1_1767681896.txt  Ticket_Cliente 2_1767681940.txt  cliente  compilar.sh  servidor
docs/html/: annotated.html  annotated_dup.js  chat_8cpp.html  chat_8cpp__incl.map  chat_8cpp__incl.md5  chat_8h.html  chat_8h.js  chat_8h__dep__incl.map  chat_8h__dep__incl.md5  chat_8h__incl.map  chat_8h__incl.md5  chat_8h_source.html  classChat-members.html  classChat.html  classChat.js  classChat__coll__graph.map  classChat__coll__graph.md5  classChat_a79939f88cfd296f84e43078975f7c134_icgraph.map  classChat_a79939f88cfd296f84e43078975f7c134_icgraph.md5  classChat_a82a5db8e25c485af7ce2d2135a85583f_icgraph.map  classChat_a82a5db8e25c485af7ce2d2135a85583f_icgraph.md5  classChat_af53cc83d7d1df84e1952443c6da2554e_icgraph.map  classChat_af53cc83d7d1df84e1952443c6da2554e_icgraph.md5  classClienteSocket-members.html  classClienteSocket.html  classClienteSocket.js  classClienteSocket__coll__graph.map  classClienteSocket__coll__graph.md5  classClienteSocket_a05d91ad7f4dc849feb1b3ed814287d64_icgraph.map  classClienteSocket_a05d91ad7f4dc849feb1b3ed814287d64_icgraph.md5  classClienteSocket_a13ae48df54e6f284951e57fcebf55069_icgraph.map  classClienteSocket_a13ae48df54e6f284951e57fcebf55069_icgraph.md5  classClienteSocket_a343c2d9d87d3d7d16bf8c45c92c92590_icgraph.map  classClienteSocket_a343c2d9d87d3d7d16bf8c45c92c92590_icgraph.md5  classClienteSocket_aad293836c4e0c552460dfe1f07667d39_icgraph.map  classClienteSocket_aad293836c4e0c552460dfe1f07667d39_icgraph.md5  classClienteSocket_ad217d24fed0bd7eeb015fc7d990da5d1_icgraph.map  classClienteSocket_ad217d24fed0bd7eeb015fc7d990da5d1_icgraph.md5  classClienteSocket_aeac5e46455422745f66b87a63a5ee6ae_cgraph.map  classClienteSocket_aeac5e46455422745f66b87a63a5ee6ae_cgraph.md5  (+116 more)
docs/latex/: annotated.tex  chat_8cpp.tex  chat_8cpp__incl.md5  chat_8h.tex  chat_8h__dep__incl.md5  chat_8h__incl.md5  chat_8h_source.tex  classChat.tex  classChat_a79939f88cfd296f84e43078975f7c134_icgraph.md5  classChat_a82a5db8e25c485af7ce2d2135a85583f_icgraph.md5  classChat_af53cc83d7d1df84e1952443c6da2554e_icgraph.md5  classClienteSocket.tex  classClienteSocket_a05d91ad7f4dc849feb1b3ed814287d64_icgraph.md5  classClienteSocket_a13ae48df54e6f284951e57fcebf55069_icgraph.md5  classClienteSocket_a343c2d9d87d3d7d16bf8c45c92c92590_icgraph.md5  classClienteSocket_aad293836c4e0c552460dfe1f07667d39_icgraph.md5  classClienteSocket_ad217d24fed0bd7eeb015fc7d990da5d1_icgraph.md5  classClienteSocket_aeac5e46455422745f66b87a63a5ee6ae_cgraph.md5  classServerSocket.tex  classServerSocket__coll__graph.md5  classServerSocket_a1a9dac66adae3be62dc422d16dd07fec_icgraph.md5  classServerSocket_a1cad4604560488599b66eebe8d590682_icgraph.md5  clienteSocket_8cpp.tex  (+54 more)
include/: chat.h  clienteSocket.h  socket.h
src/: chat.cpp  client  clienteSocket.cpp  main.cpp  main2.cpp  main_cliente.cpp  main_server.cpp  servidor  socket.cpp
(+36 files in other folders)
